Retain the order in saved host and fix the logging.

--- a/src/main/java/nl/verheulconsultants/monitorisp/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/HomePage.html
@@ -5,14 +5,13 @@
       lang="en"> 
     <head> 
         <wicket:head> 
-            <title>Wicket Example</title> 
+            <title>ISP monitor</title> 
         </wicket:head> 
     </head> 
     <body> 
         <wicket:extend> 
             <h1 wicket:id="message">This gets replaced</h1>
 
-            <div wicket:id="feedback"></div>
             <form wicket:id="form">
                 <p>
                     <label>Select the URL's to test against </label> 
@@ -21,7 +20,7 @@
                     <span wicket:id="palette"></span>
 
                 </p>
-                <input type="submit" value="Display" />
+                <input type="submit" value="Save" />
             </form>
         </wicket:extend> 
     </body> 
