--- a/src/main/java/nl/verheulconsultants/monitorisp/HeaderPanel.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/HeaderPanel.html
@@ -3,7 +3,7 @@
       xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd"  
       xml:lang="en"  
       lang="en"> 
-    <head><title>Wicket Example</title></head>
+    <head><title>ISP monitor</title></head>
     <body>
         <wicket:panel>
             <h1>ISP Monitor</h1>
