--- a/src/main/java/nl/verheulconsultants/monitorisp/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/HomePage.html
@@ -12,7 +12,7 @@
         <wicket:extend> 
             <h1 wicket:id="message">This gets replaced</h1>
 
-            <form wicket:id="form">
+            <form wicket:id="form1">
                 <p>
                     <label>Select the URL's to test against </label> 
                     <br /> 
@@ -21,6 +21,17 @@
 
                 </p>
                 <input type="submit" value="Save" />
+            </form>
+        
+            <form wicket:id="form2">
+                <p>
+                    <label>Add a host URL to the table </label> 
+                    <br /> 
+
+                    <input type="text" wicket:id="new-host" size="30"/>
+
+                </p>
+
             </form>
         </wicket:extend> 
     </body> 
