Moved UI components in ui package, added service components in service package.

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -17,7 +17,7 @@
                     <label>Select the URL's to test against </label> 
                     <br /> 
 
-                    <span wicket:id="palette"></span>
+                    <span wicket:id="palette1"></span>
 
                 </p>
                 <label>(mandatory) When done, always save before you continue </label>
