--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -56,7 +56,7 @@
 
             <table wicket:id="theContainer">
                 <tr><th>index</th><th>name</th><th>value</th></tr>
-                <tr wicket:id="hateList">
+                <tr wicket:id="listView">
                     <td><span wicket:id="Index">index</span></td>
                     <td><span wicket:id="Name">name</span></td>
                     <td><span wicket:id="Value">date</span></td>
