--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -14,13 +14,12 @@
             <h1 wicket:id="message2">This gets replaced</h1>
 
             <form wicket:id="paletteForm">
-                <p>
-                    <label>Select the URL's to test against </label> 
-                    <br /> 
 
-                    <span wicket:id="palette1"></span>
+                <label>Select the URL's to test against </label> 
+                <br /> 
 
-                </p>
+                <div wicket:id="palette1"></div>
+
 
                 <label>(optional) Remove the selected hosts from the table </label>
                 <input wicket:id="removeButton" type="submit" value="Remove" />
@@ -45,7 +44,7 @@
                 </p>
             </form>
 
-            
+
 
             <table wicket:id="theContainer">
                 <tr><th>index</th><th>name</th><th>value</th></tr>
