Refactor current state.

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HeaderPanel.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HeaderPanel.html
@@ -8,7 +8,7 @@
         <wicket:panel>
             <h1>ISP Monitor</h1>
             <p id="titleblock">
-                <b><font size="+1"><span wicket:id="exampleTitle">Example Title Goes Here</span></font></b>
+                <b><font size="+1"><span wicket:id="title">Title Goes Here</span></font></b>
             </p>
         </wicket:panel>
     </body>
