--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -45,6 +45,18 @@
                     <td><span wicket:id="Value">date</span></td>
                 </tr>
             </table>
+            <br />
+            <p>
+                <h1>History of outages</h1>
+            </p>
+            <table wicket:id="outageContainer">
+                <tr><th>index</th><th>start</th><th>end</th></tr>
+                <tr wicket:id="outageListView">
+                    <td><span wicket:id="Index">index</span></td>
+                    <td><span wicket:id="Start">start</span></td>
+                    <td><span wicket:id="End">end</span></td>
+                </tr>
+            </table>
 
         </wicket:extend> 
     </body> 
