Ready detecting local network outages up to the router. Use simple validation for both text fields.

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -29,11 +29,19 @@
             </form>           
             <div wicket:id="feedback">[Feedback Panel]</div>
 
-            <form wicket:id="addForm">
+            <form wicket:id="addHostForm">
                 <p>
                     <label>(optional) Add a host URL to the table </label> 
                     <br /> 
-                    <input type="text" wicket:id="new-host" size="30"/>
+                    <input type="text" wicket:id="newHost" size="30"/>
+                </p>
+            </form>
+            
+            <form wicket:id="routerForm">
+                <p>
+                    <label>(optional) Enter your router address </label> 
+                    <br /> 
+                    <input type="text" wicket:id="routerAddress" size="30"/>
                 </p>
             </form>
 
