Add current unavailability field. Calculate total unavailability from outages + current unavailability. Show outages dates and duration.

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -58,11 +58,12 @@
                 <h1>History of outages</h1>
             </p>
             <table wicket:id="outageContainer">
-                <tr><th>index</th><th>start</th><th>end</th></tr>
+                <tr><th>index</th><th>start</th><th>end</th><th>duration</th></tr>
                 <tr wicket:id="outageListView">
                     <td><span wicket:id="Index">index</span></td>
                     <td><span wicket:id="Start">start</span></td>
                     <td><span wicket:id="End">end</span></td>
+                    <td><span wicket:id="Duration">duration</span></td>
                 </tr>
             </table>
 
