Fix Sonar remarks.

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -46,7 +46,7 @@
                 <tr><th>index</th><th>name</th><th>value</th></tr>
                 <tr wicket:id="statusListView">
                     <td><span wicket:id="Index">index</span></td>
-                    <td><span wicket:id="Name">name</span></td>
+                    <td><span wicket:id="Name">hostAddress</span></td>
                     <td><span wicket:id="Value">date</span></td>
                 </tr>
             </table>
