Add a button to remove all hosts from the available column

--- a/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
+++ b/src/main/java/nl/verheulconsultants/monitorisp/ui/HomePage.html
@@ -17,9 +17,10 @@
         <br />
 
         <div wicket:id="palette1"></div>
-
-        <!--label>(optional) Remove the selected hosts from the table </label>
-        <input wicket:id="removeButton" type="submit" value="Remove" /-->
+        <p>
+          <label>(optional) Remove the hosts in the available column</label>
+          <input wicket:id="removeButton" type="submit" value="Remove" />
+        </p>
       </form>
 
       <form wicket:id="startStopForm">
